--- a/templates/sample.html
+++ b/templates/sample.html
@@ -10,8 +10,32 @@
     </style>
 </head>
 <body>
+    <h3>Get name</h3>
+    {% if name %}
+        <p> 我的名字是: {{ name }} </p>
+    {% endif %}
+
+    <h3>Get numbers</h3>
+    {% for number in numbers %}
+        <p>  Get number : {{ number }} </p>
+    {% endfor %}
+
+    <h3>Get pairs</h3>
+    {% for alpha, number in pairs %}
+        <p>  Get pairs : {{ alpha }}, {{ number }} </p>
+    {% endfor %}
+
+    <h3>Get dictionary</h3>
+    {% for key, value in dict_data.items() %}
+        <p>  Get dictionary : {{ key }}, {{ value }} </p>
+    {% endfor %}
+
+    {% for key in dict_data %}
+        <p>  Get value with key: {{dict_data[key]}} </p>
+    {% endfor %}
+
     <h2>輸入你的資訊</h2>
-    <input type="text" id="name" placeholder="請輸入你的名字">
+    <input type="text" id="name" placeholder="請輸入你的名字" value="{{ name }}">
     <br>
     <button onclick="submitForm()">提交</button>
     <button onclick="clearForm()">清除</button>
